--- a/index.html
+++ b/index.html
@@ -19,77 +19,77 @@ a:hover { text-decoration:underline;} a:active {color:red; text-decoration:none;
 </ol><hr/>
 <li> 2주차 </li>
 <ol>
-<li><a href="https://sam364512.github.io/2/def.html">실습 과제 2-1 def </a></li>
+<li><a href="https://sam364512.github.io/2/def.html">실습 과제 2-1 def.html </a></li>
 <li><a href="https://sam364512.github.io/2/hw2-1.html">강의 과제 2-1 엘리멘트 </a></li>  
-<li><a href="https://sam364512.github.io/2/loveKorea.html">실습 과제 2-2 loveKorea </a></li>
-<li><a href="https://sam364512.github.io/2/globalAttribute.html">실습 과제 2-2 globalAttribute </a></li>
-<li><a href="https://sam364512.github.io/2/globalEvent.html">실습 과제 2-2 globalEvent </a></li>
-<li><a href="https://sam364512.github.io/2/koreaAnthem.html">강의 과제 2-2 koreaAnthem </a></li>
-<li><a href="https://sam364512.github.io/2/headBasic.html">실습 과제 2-3 headBasic </a></li>
-<li><a href="https://sam364512.github.io/2/bodyBasic.html">실습 과제 2-3 bodyBasic </a></li>
-<li><a href="https://sam364512.github.io/2/koreaAnthem3.html">강의 과제 2-3 koreaAnthem3 </a></li>
+<li><a href="https://sam364512.github.io/2/loveKorea.html">실습 과제 2-2 loveKorea.html </a></li>
+<li><a href="https://sam364512.github.io/2/globalAttribute.html">실습 과제 2-2 globalAttribute.html </a></li>
+<li><a href="https://sam364512.github.io/2/globalEvent.html">실습 과제 2-2 globalEvent.html </a></li>
+<li><a href="https://sam364512.github.io/2/koreaAnthem.html">강의 과제 2-2 koreaAnthem.html </a></li>
+<li><a href="https://sam364512.github.io/2/headBasic.html">실습 과제 2-3 headBasic.html </a></li>
+<li><a href="https://sam364512.github.io/2/bodyBasic.html">실습 과제 2-3 bodyBasic.html </a></li>
+<li><a href="https://sam364512.github.io/2/koreaAnthem3.html">강의 과제 2-3 koreaAnthem3.html </a></li>
 </ol><hr/>
 <li> 3주차 </li>
 <ol>
-<li><a href="https://sam364512.github.io/3/basicHeading.html">실습 과제 3-1 basicHeading </a></li>
-<li><a href="https://sam364512.github.io/3/basicPBrHr.html">실습 과제 3-1 basicPBrHr </a></li>  
-<li><a href="https://sam364512.github.io/3/basicChar.html">실습 과제 3-1 basicChar </a></li>
-<li><a href="https://sam364512.github.io/3/koreaAnthem4.html">강의 과제 3-1 koreaAnthem4 </a></li>
-<li><a href="https://sam364512.github.io/3/basicList.html">실습 과제 3-2 basicList </a></li>
-<li><a href="https://sam364512.github.io/3/basicDList.html">실습 과제 3-2  basicDList </a></li>
-<li><a href="https://sam364512.github.io/3/koreaAnthem5.html">강의 과제 3-2 koreaAnthem5 </a></li>
-<li><a href="https://sam364512.github.io/3/koreaAnthem6.html">강의 과제 3-2 koreaAnthem6 </a></li>
-<li><a href="https://sam364512.github.io/3/basicTable.html">실습 과제 3-3 basicTable </a></li>
-<li><a href="https://sam364512.github.io/3/tableSpan.html">실습 과제 3-3 tableSpan </a></li>
-<li><a href="https://sam364512.github.io/3/advTable.html">실습 과제 3-3 advTable </a></li>
-<li><a href="https://sam364512.github.io/3/advTable1.html">강의 과제 3-3 advTable1 </a></li>
-<li><a href="https://sam364512.github.io/3/tableHw.html">강의 과제 3-3 tableHw </a></li>
-<li><a href="https://sam364512.github.io/3/subjectTable1.html">강의 과제 3-3 subjectTable1 </a></li>
+<li><a href="https://sam364512.github.io/3/basicHeading.html">실습 과제 3-1 basicHeading.html </a></li>
+<li><a href="https://sam364512.github.io/3/basicPBrHr.html">실습 과제 3-1 basicPBrHr.html </a></li>  
+<li><a href="https://sam364512.github.io/3/basicChar.html">실습 과제 3-1 basicChar.html </a></li>
+<li><a href="https://sam364512.github.io/3/koreaAnthem4.html">강의 과제 3-1 koreaAnthem4.html </a></li>
+<li><a href="https://sam364512.github.io/3/basicList.html">실습 과제 3-2 basicList.html </a></li>
+<li><a href="https://sam364512.github.io/3/basicDList.html">실습 과제 3-2  basicDList.html </a></li>
+<li><a href="https://sam364512.github.io/3/koreaAnthem5.html">강의 과제 3-2 koreaAnthem5.html </a></li>
+<li><a href="https://sam364512.github.io/3/koreaAnthem6.html">강의 과제 3-2 koreaAnthem6.html </a></li>
+<li><a href="https://sam364512.github.io/3/basicTable.html">실습 과제 3-3 basicTable.html </a></li>
+<li><a href="https://sam364512.github.io/3/tableSpan.html">실습 과제 3-3 tableSpan.html </a></li>
+<li><a href="https://sam364512.github.io/3/advTable.html">실습 과제 3-3 advTable.html </a></li>
+<li><a href="https://sam364512.github.io/3/advTable1.html">강의 과제 3-3 advTable1.html </a></li>
+<li><a href="https://sam364512.github.io/3/tableHw.html">강의 과제 3-3 tableHw.html </a></li>
+<li><a href="https://sam364512.github.io/3/subjectTable1.html">강의 과제 3-3 subjectTable1.html </a></li>
 </ol><hr/>
 <li> 4주차 </li>
 <ol>
-<li><a href="https://sam364512.github.io/4/divSpan.html">실습 과제 4-1 divSpan </a></li>
+<li><a href="https://sam364512.github.io/4/divSpan.html">실습 과제 4-1 divSpan.html </a></li>
 <li><a href="https://sam364512.github.io/4/basicPDivSpan.html">실습 과제 4-1 basicPDivSpan.html </a></li>  
-<li><a href="https://sam364512.github.io/4/basicDiv.html">실습 과제 4-2 basicDiv </a></li>
-<li><a href="https://sam364512.github.io/4/advDiv.html">강의 과제 4-2 advDiv </a></li>
-<li><a href="https://sam364512.github.io/4/basicSemantic.html">실습 과제 4-3 basicSemantic </a></li>
-<li><a href="https://sam364512.github.io/4/basicModel.html">실습 과제 4-3  basicModel </a></li>
+<li><a href="https://sam364512.github.io/4/basicDiv.html">실습 과제 4-2 basicDiv.html </a></li>
+<li><a href="https://sam364512.github.io/4/advDiv.html">강의 과제 4-2 advDiv.html </a></li>
+<li><a href="https://sam364512.github.io/4/basicSemantic.html">실습 과제 4-3 basicSemantic.html </a></li>
+<li><a href="https://sam364512.github.io/4/basicModel.html">실습 과제 4-3  basicModel.html </a></li>
 </ol><hr/>
 <li> 5주차 </li>
 <ol>
-<li><a href="https://sam364512.github.io/5/anchor1.html">과제 5-1 anchor1 </a></li>
-<li><a href="https://sam364512.github.io/5/anchor2.html">과제 5-1 anchor2 </a></li>  
-<li><a href="https://sam364512.github.io/5/advAnchor.html">과제 5-1 advAnchor </a></li>
-<li><a href="https://sam364512.github.io/5/basicSemantic1.html">과제 5-1 basicSemantic1 </a></li>
-<li><a href="https://sam364512.github.io/5/basiclmage.html">과제 5-2 basiclmage </a></li>
-<li><a href="https://sam364512.github.io/5/basicSemantic2.html">과제 5-2  basicSemantic2 </a></li>
-<li><a href="https://sam364512.github.io/5/imageMap.html">과제 5-3 imageMap </a></li>
-<li><a href="https://sam364512.github.io/5/hw1/hw.html">과제 5-3 hw </a></li>
-<li><a href="https://sam364512.github.io/5/hw2/hw2.html">과제 5-3 hw2 </a></li>
+<li><a href="https://sam364512.github.io/5/anchor1.html">과제 5-1 anchor1.html </a></li>
+<li><a href="https://sam364512.github.io/5/anchor2.html">과제 5-1 anchor2.html </a></li>  
+<li><a href="https://sam364512.github.io/5/advAnchor.html">과제 5-1 advAnchor.html </a></li>
+<li><a href="https://sam364512.github.io/5/basicSemantic1.html">과제 5-1 basicSemantic1.html </a></li>
+<li><a href="https://sam364512.github.io/5/basiclmage.html">과제 5-2 basiclmage.html </a></li>
+<li><a href="https://sam364512.github.io/5/basicSemantic2.html">과제 5-2  basicSemantic2.html </a></li>
+<li><a href="https://sam364512.github.io/5/imageMap.html">과제 5-3 imageMap.html </a></li>
+<li><a href="https://sam364512.github.io/5/hw1/hw.html">과제 5-3 hw.html </a></li>
+<li><a href="https://sam364512.github.io/5/hw2/hw2.html">과제 5-3 hw2.html </a></li>
 </ol><hr/>
 <li> 6주차 </li>
 <ol>
-<li><a href="https://sam364512.github.io/6/basicAudio.html">과제 6-1 basicAudio </a></li>
-<li><a href="https://sam364512.github.io/6/basicVideo.html">과제 6-2 basicVideo </a></li>  
-<li><a href="https://sam364512.github.io/6/basicSemantic3.html">과제 6-2 basicSemantic3 </a></li>
-<li><a href="https://sam364512.github.io/6/anchor2.html">과제 6-2 anchor2 </a></li>
-<li><a href="https://sam364512.github.io/6/formFieldset1.html">과제 6-3 formFieldset1 </a></li>
-<li><a href="https://sam364512.github.io/6/formText1.html">과제 6-3  formText1 </a></li>
+<li><a href="https://sam364512.github.io/6/basicAudio.html">과제 6-1 basicAudio.html </a></li>
+<li><a href="https://sam364512.github.io/6/basicVideo.html">과제 6-2 basicVideo.html </a></li>  
+<li><a href="https://sam364512.github.io/6/basicSemantic3.html">과제 6-2 basicSemantic3.html </a></li>
+<li><a href="https://sam364512.github.io/6/anchor2.html">과제 6-2 anchor2.html </a></li>
+<li><a href="https://sam364512.github.io/6/formFieldset1.html">과제 6-3 formFieldset1.html </a></li>
+<li><a href="https://sam364512.github.io/6/formText1.html">과제 6-3  formText1.html </a></li>
 </ol><hr/>
 <li> 7주차 </li>
 <ol>
-<li><a href="https://sam364512.github.io/7/formRadio1.html">과제 7-1 formRadio1 </a></li>
-<li><a href="https://sam364512.github.io/7/formCheckbox1.html">과제 7-1 formCheckbox1 </a></li>  
-<li><a href="https://sam364512.github.io/7/formSearch1.html">과제 7-1 formSearch1 </a></li>
-<li><a href="https://sam364512.github.io/7/formDateTime1.html">과제 7-1 formDateTime1 </a></li>
-<li><a href="https://sam364512.github.io/7/formEmailAuto1.html">과제 7-2 formEmailAuto1 </a></li>
-<li><a href="https://sam364512.github.io/7/formFormaction1.html">과제 7-2  formFormaction1 </a></li>
-<li><a href="https://sam364512.github.io/7/formSelect1.html">과제 7-2 formSelect1 </a></li>
-<li><a href="https://sam364512.github.io/7/formMselect1.html">과제 7-3 formMselect1 </a></li>  
-<li><a href="https://sam364512.github.io/7/formTextarea1.html">과제 7-3 formTextarea1 </a></li>
-<li><a href="https://sam364512.github.io/7/anchor2.html">과제 7-3 anchor2 </a></li>
-<li><a href="https://sam364512.github.io/7/basicSemantic4.html">과제 7-3 basicSemantic4 </a></li>
-<li><a href="https://sam364512.github.io/7/jspintro.html">과제 7-3  jspintro </a></li>
+<li><a href="https://sam364512.github.io/7/formRadio1.html">과제 7-1 formRadio1.html </a></li>
+<li><a href="https://sam364512.github.io/7/formCheckbox1.html">과제 7-1 formCheckbox1.html </a></li>  
+<li><a href="https://sam364512.github.io/7/formSearch1.html">과제 7-1 formSearch1.html </a></li>
+<li><a href="https://sam364512.github.io/7/formDateTime1.html">과제 7-1 formDateTime1.html </a></li>
+<li><a href="https://sam364512.github.io/7/formEmailAuto1.html">과제 7-2 formEmailAuto1.html </a></li>
+<li><a href="https://sam364512.github.io/7/formFormaction1.html">과제 7-2  formFormaction1.html </a></li>
+<li><a href="https://sam364512.github.io/7/formSelect1.html">과제 7-2 formSelect1.html </a></li>
+<li><a href="https://sam364512.github.io/7/formMselect1.html">과제 7-3 formMselect1.html </a></li>  
+<li><a href="https://sam364512.github.io/7/formTextarea1.html">과제 7-3 formTextarea1.html </a></li>
+<li><a href="https://sam364512.github.io/7/anchor2.html">과제 7-3 anchor2.html </a></li>
+<li><a href="https://sam364512.github.io/7/basicSemantic4.html">과제 7-3 basicSemantic4.html </a></li>
+<li><a href="https://sam364512.github.io/7/jspintro.html">과제 7-3  jspintro.html </a></li>
 </ol><hr/>
 </ul>
 </body></html>
